// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamburgerButton renders correctly 1`] = `
<div>
  <button
    className="hamburgerButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "background": "none",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "outline": "inherit",
        "padding": 0,
      }
    }
    type="button"
  >
    <img
      alt="Open Menu"
      src="test-file-stub"
      style={
        Object {
          "color": "#70F3FF",
          "display": "block",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </button>
  
</div>
`;

exports[`HamburgerButton renders opened correctly 1`] = `
<div>
  <button
    className="hamburgerButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "background": "none",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "outline": "inherit",
        "padding": 0,
      }
    }
    type="button"
  >
    <img
      alt="Open Menu"
      src="test-file-stub"
      style={
        Object {
          "color": "#70F3FF",
          "display": "block",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </button>
  <div>
    <div
      id="menuLinks"
    >
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "fontSize": "24px",
            "padding": "10px",
            "textDecoration": "none",
          }
        }
      >
        About
      </a>
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "fontSize": "24px",
            "padding": "10px",
            "textDecoration": "none",
          }
        }
      >
        Contact
      </a>
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "fontSize": "24px",
            "padding": "10px",
            "textDecoration": "none",
          }
        }
      >
        Login
      </a>
    </div>
  </div>
</div>
`;
